// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputGroup /> create input group items 1`] = `
<div
  className="fd-input-group"
>
  <span
    className="fd-input-group__addon"
  >
    $
  </span>
  <input
    addon="text"
    className="fd-input fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
</div>
`;

exports[`<InputGroup /> create input group items 2`] = `
<div
  className="fd-input-group"
>
  <input
    addon="text"
    className="fd-input fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon"
  >
    €
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 3`] = `
<div
  className="fd-input-group fd-input-group--compact"
  compact={true}
>
  <span
    className="fd-input-group__addon"
  >
    $
  </span>
  <input
    addon="text"
    className="fd-input fd-input--compact fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
</div>
`;

exports[`<InputGroup /> create input group items 4`] = `
<div
  className="fd-input-group fd-input-group--compact"
  compact={true}
>
  <input
    addon="text"
    className="fd-input fd-input--compact fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon"
  >
    €
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 5`] = `
<div
  className="fd-input-group"
>
  <span
    className="fd-input-group__addon"
  >
    <span
      className="sap-icon--globe"
      role="presentation"
    />
  </span>
  <input
    addon="icon"
    className="fd-input fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
</div>
`;

exports[`<InputGroup /> create input group items 6`] = `
<div
  className="fd-input-group fd-input-group--compact"
  compact={true}
>
  <span
    className="fd-input-group__addon"
  >
    <span
      className="sap-icon--globe"
      role="presentation"
    />
  </span>
  <input
    addon="icon"
    className="fd-input fd-input--compact fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
</div>
`;

exports[`<InputGroup /> create input group items 7`] = `
<div
  className="fd-input-group"
>
  <input
    addon="icon"
    className="fd-input fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon"
  >
    <span
      className="sap-icon--hide"
      role="presentation"
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 8`] = `
<div
  className="fd-input-group fd-input-group--compact"
  compact={true}
>
  <input
    addon="icon"
    className="fd-input fd-input--compact fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon"
  >
    <span
      className="sap-icon--hide"
      role="presentation"
    />
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 9`] = `
<div
  className="fd-input-group"
>
  <input
    actions={true}
    addon="button"
    className="fd-input fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button"
  >
    <button
      className="fd-button--light"
    >
      Button
    </button>
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 10`] = `
<div
  className="fd-input-group fd-input-group--compact"
  compact={true}
>
  <input
    actions={true}
    addon="button"
    className="fd-input fd-input--compact fd-input-group__input"
    placeholder="Type text here"
    type="text"
  />
  <span
    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--button--compact"
  >
    <button
      className="fd-button--light fd-button--compact"
    >
      Button
    </button>
  </span>
</div>
`;

exports[`<InputGroup /> create input group items 11`] = `"<InputGroup />"`;
